<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/EstiloContenedorPrincipal"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                style="@style/EstiloTitulos"
                android:layout_height="wrap_content"
                android:gravity="left"/>

            <ImageView
                android:id="@+id/imagenReferencia"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                tools:src="@tools:sample/avatars" />


            <TextView
                android:text="@string/titulo_informacion"
                style="@style/EstiloSubTitulosContenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/lbl_id"
                    style="@style/EstiloLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/txtID"
                    style="@style/EstiloContenido"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/lbl_nombre"
                    style="@style/EstiloLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/txtNombre"
                    style="@style/EstiloContenido"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/lbl_descripcion"
                    style="@style/EstiloLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/txtDescripcion"
                    style="@style/EstiloContenido"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/lbl_enlace"
                    style="@style/EstiloLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/txtEnlace"
                    style="@style/EstiloContenido"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/lbl_tipo"
                    style="@style/EstiloLabels"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/txtTipo"
                    style="@style/EstiloContenido"
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_weight="3"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>